tests/parse-error/inner_attr_no_attr/output.txt
Error at tests/parse-error/inner_attr_no_attr/input.rs:2:4:
    |
  2 | #![
    |    ^
└─Expected a crate at 1:1
  └─Expected an inner attribute at 1:1
    └─Expected a simple path at 2:4
      └─Multiple errors:
        ├─Expected `super`
        ├─Expected `self`
        ├─Expected `crate`
        ├─Expected `$crate`
        └─Expected an identifier at 2:4
          └─Multiple errors:
            ├─Expected `r#`
            └─Expected `XID_START` or `_`
